<resources>
    <string name="app_name">Telegraph</string>
    <string name="JoinButtonText">Подключиться</string>
    <string name="CreateButtonText">Создать</string>
    <string name="ExitFromServerRoomButtonText">Выйти</string>
    <string name="ClientMessagesBoxText">Сообщения :</string>
    <string name="ServerMessagesBoxText">Сообщения :</string>
    <string name="StartServerConnectorButtonText">Запуск\nКоннектора</string>
    <string name="ClientSendMessageButtonText">Отправить</string>
    <string name="ServerSendMessageButtonText">Отправить</string>
    <string name="ExitFromClientRoomButtonText">Выйти</string>
    <string name="StopServerConnectorButtonText">Остановка\nКоннектора</string>
    <string name="StartServerButtonText">Запуск</string>
    <string name="Status_SERVER_IDLE_Text">СЕРВЕР</string>
    <string name="Status_SERVER_STARTING_Text">ЗАПУСК СЕРВЕРА …</string>
    <string name="Status_SERVER_STOPPING_Text">ОСТАНОВКА СЕРВЕРА …</string>
    <string name="Status_SERVER_CONNECTOR_STARTING_Text">ВКЛЮЧЕНИЕ ВИДИМОСТИ …</string>
    <string name="Status_SERVER_CONNECTOR_STOPPING_Text">ОТКЛЮЧЕНИЕ ВИДИМОСТИ …</string>
    <string name="Status_CLIENT_IDLE_Text">КЛИЕНТ</string>
    <string name="Status_CLIENT_STARTING_Text">ЗАПУСК КЛИЕНТА …</string>
    <string name="Status_CLIENT_STOPPING_Text">ОСТАНОВКА КЛИЕНТА …</string>
    <string name="Status_CLIENT_CONNECTOR_STARTING_Text">СОЕДИНЕНИЕ</string>
    <string name="ExitFromFindRoomButtonText">Выйти</string>
    <string name="FoundedRoomsTextViewText">Найденные комнаты :</string>
    <string name="main_menu_settings_text">Настройки</string>
    <string name="Settings_SaveAndExitButtonText">Сохранить и выйти</string>
    <string name="client_menu_settings_text">Настройки</string>
    <string name="client_menu_exit_text">Выйти</string>
    <string name="client_menu_files_text">Файлы</string>
    <string name="server_menu_settings_text">Настройки</string>
    <string name="server_menu_files_text">Файлы</string>
    <string name="server_menu_exit_text">Выйти</string>
</resources>
