<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcp83.telegraph.ClientRoomActivity">

    <Button
        android:id="@+id/ExitFromClientRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="ExitFromClientRoomButtonClick"
        android:text="@string/ExitFromClientRoomButtonText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ClientMessageBox"
        android:layout_alignBaseline="@+id/ClientSendMessageButton"
        android:layout_alignBottom="@+id/ClientSendMessageButton"
        android:layout_toRightOf="@+id/ClientSendMessageButton"
        android:layout_toEndOf="@+id/ClientSendMessageButton" />

    <Button
        android:id="@+id/ClientSendMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ClientStatusTextView"
        android:onClick="ClientSendMessageButtonClick"
        android:text="@string/ClientSendMessageButtonText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClientStatusTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/ClientMessagesBoxScrollView"
        android:layout_below="@+id/ExitFromClientRoomButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/ClientSendMessageButton">

        <TextView
            android:text="@string/ClientMessagesBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ClientMessagesBox"/>
    </ScrollView>


</RelativeLayout>
