<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_server_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcp83.telegraph.ServerRoomActivity">

    <TextView
        android:id="@+id/ServerStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ServerVisibilityToggleButton"
        android:layout_alignStart="@+id/ServerVisibilityToggleButton"
        android:layout_below="@+id/ExitFromServerRoomButton" />

    <Button
        android:text="@string/ExitFromServerRoomButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ExitFromServerRoomButton"
        android:onClick="ExitFromServerRoomButtonClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ServerMessagesBoxScrollView"
        android:layout_below="@+id/ServerStatusTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/ServerSendMessageButton">

        <TextView
            android:text="@string/ServerMessagesBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ServerMessagesBox"/>

    </ScrollView>

    <Button
        android:text="@string/ServerSendMessageButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ServerSendMessageButton"
        android:onClick="ServerSendMessageButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ServerMessageBox"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:id="@+id/ServerVisibilityToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="Видимость : OFF"
        android:textOn="Видимость : ON"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
